--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,100 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
+[libraries]
+CircularBuffer = rlogiacco/CircularBuffer @ ^1.3.3
+pubsubclient = PubSubClient@2.8
+arduinojson = ArduinoJson@6.18.3
+wifimanager32 = https://github.com/tzapu/WiFiManager.git#9f5981e
+Ticker = sstaub/Ticker@^4.4.0
+arduinolog = thijse/ArduinoLog@1.1.1
+
+[env:ota]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+board_build.ldscript = eagle.flash.4m3m.ld
+board_build.filesystem = littlefs
+upload_protocol = espota
+upload_port = 10.1.2.10
+lib_deps = 
+	${libraries.CircularBuffer}
+	${libraries.PubSubClient}
+	${libraries.ArduinoJson}
+	${libraries.Ticker}
+
+[env:serial]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+board_build.ldscript = eagle.flash.4m3m.ld
+board_build.filesystem = littlefs
+upload_port = COM3
+upload_speed = 115200
+lib_deps = 
+	${libraries.CircularBuffer}
+	${libraries.PubSubClient}
+	${libraries.ArduinoJson}
+	${libraries.Ticker}
+
+[env:ESP32serial]
+platform = espressif32@6.1.0
+board = esp32dev
+monitor_filters = esp32_exception_decoder
+framework = arduino
+build_type = debug
+board_build.filesystem = littlefs
+board_build.partitions = min_spiffs.csv
+lib_deps = 
+	${libraries.wifimanager32}
+	${libraries.CircularBuffer}
+	${libraries.PubSubClient}
+	${libraries.ArduinoJson}
+	${libraries.Ticker}
+	${libraries.arduinolog}
+build_flags =
+  '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
+;	'-DBENCHTEST'
+
+monitor_port = /dev/cu.usbserial-0001
+monitor_speed = 115200
+upload_port = /dev/cu.usbserial-0001
+upload_speed = 921600
+
+[env:ESP32ota]
+platform = espressif32@6.1.0
+board = esp32dev
+monitor_filters = esp32_exception_decoder
+framework = arduino
+build_type = debug
+board_build.filesystem = littlefs
+board_build.partitions = min_spiffs.csv
+lib_deps = 
+	${libraries.wifimanager32}
+	${libraries.CircularBuffer}
+	${libraries.PubSubClient}
+	${libraries.ArduinoJson}
+	${libraries.Ticker}
+	${libraries.arduinolog}
+build_flags =
+  '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
+;  '-DDISABLE_LOGGING'
+
+monitor_port = /dev/cu.usbserial-0001
+monitor_speed = 115200
+upload_port = spa-3C71BF9DFA90.local.
+upload_protocol = espota
+
 [env:d1_mini_pro]
 platform = espressif8266
 board = d1_mini
@@ -25,3 +119,4 @@ lib_deps =
      bblanchon/ArduinoJson @ ^6.17.2
 #     hieromon/AutoConnect @ ^1.2.2
      bbx10/DNSServer @ ^1.1.0
+
