--- a/platformio.ini
+++ b/platformio.ini
@@ -23,8 +23,9 @@ CircularBuffer = rlogiacco/CircularBuffer @ ^1.3.3
 pubsubclient = PubSubClient@2.8
 arduinojson = ArduinoJson@6.18.3
 wifimanager32 = https://github.com/tzapu/WiFiManager.git#9f5981e
-Ticker = sstaub/Ticker@^4.4.0
+Ticker = sstaub/TickTwo@^4.4.0
 arduinolog = thijse/ArduinoLog@1.1.1
+DallasTemperature = milesburton/DallasTemperature @ ^3.11.0
 
 [env:ESP32serial]
 platform = espressif32@6.1.0
@@ -41,6 +42,7 @@ lib_deps =
 	${libraries.ArduinoJson}
 	${libraries.Ticker}
 	${libraries.arduinolog}
+	${libraries.DallasTemperature}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
 ;	'-DBENCHTEST'
@@ -65,6 +67,7 @@ lib_deps =
 	${libraries.ArduinoJson}
 	${libraries.Ticker}
 	${libraries.arduinolog}
+	${libraries.DallasTemperature}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
 ;  '-DDISABLE_LOGGING'
