--- a/platformio.ini
+++ b/platformio.ini
@@ -76,3 +76,28 @@ monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
 upload_port = spa-3C71BF9DFA90.local.
 upload_protocol = espota
+
+[env:ESP32prodOta]
+platform = espressif32@6.1.0
+board = esp32dev
+monitor_filters = esp32_exception_decoder
+framework = arduino
+build_type = debug
+board_build.filesystem = littlefs
+board_build.partitions = min_spiffs.csv
+lib_deps = 
+	${libraries.wifimanager32}
+	${libraries.CircularBuffer}
+	${libraries.PubSubClient}
+	${libraries.ArduinoJson}
+	${libraries.Ticker}
+	${libraries.arduinolog}
+	${libraries.DallasTemperature}
+build_flags =
+  '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
+;  '-DDISABLE_LOGGING'
+
+monitor_port = /dev/cu.usbserial-0001
+monitor_speed = 115200
+upload_port = spa-3C71BF9DFA90.local.
+upload_protocol = espota
