--- a/emulator/package.json
+++ b/emulator/package.json
@@ -5,11 +5,26 @@
   "type": "module",
   "main": "spaEmulator.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "node spaEmulator.js",
+    "watch": "nodemon spaEmulator.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "serialport": "^12.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "./"
+    ],
+    "ext": "js",
+    "ignore": [
+      "node_modules/"
+    ],
+    "exec": "node spaEmulator.js",
+    "signal": "SIGTERM"
   }
 }
