--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,7 @@ wifimanager32 = https://github.com/tzapu/WiFiManager.git#9f5981e
 Ticker = sstaub/TickTwo@^4.4.0
 arduinolog = thijse/ArduinoLog@1.1.1
 DallasTemperature = milesburton/DallasTemperature @ ^3.11.0
+CRC8 = RobTillaart/CRC
 
 [env:ESP32serial]
 platform = espressif32@6.1.0
@@ -43,6 +44,7 @@ lib_deps =
 	${libraries.Ticker}
 	${libraries.arduinolog}
 	${libraries.DallasTemperature}
+	${libraries.CRC8}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
 ;	'-DBENCHTEST'
@@ -68,6 +70,7 @@ lib_deps =
 	${libraries.Ticker}
 	${libraries.arduinolog}
 	${libraries.DallasTemperature}
+	${libraries.CRC8}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
 ;  '-DDISABLE_LOGGING'
@@ -93,6 +96,7 @@ lib_deps =
 	${libraries.Ticker}
 	${libraries.arduinolog}
 	${libraries.DallasTemperature}
+	${libraries.CRC8}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
 ;  '-DDISABLE_LOGGING'
