--- a/platformio.ini
+++ b/platformio.ini
@@ -23,8 +23,10 @@ CircularBuffer = rlogiacco/CircularBuffer @ ^1.3.3
 pubsubclient = PubSubClient@2.8
 arduinojson = ArduinoJson@6.18.3
 wifimanager32 = https://github.com/tzapu/WiFiManager.git#9f5981e
-Ticker = sstaub/Ticker@^4.4.0
+Ticker = sstaub/TickTwo@^4.4.0
 arduinolog = thijse/ArduinoLog@1.1.1
+DallasTemperature = milesburton/DallasTemperature @ ^3.11.0
+CRC8 = RobTillaart/CRC
 
 [env:ESP32serial]
 platform = espressif32@6.1.0
@@ -41,6 +43,8 @@ lib_deps =
 	${libraries.ArduinoJson}
 	${libraries.Ticker}
 	${libraries.arduinolog}
+	${libraries.DallasTemperature}
+	${libraries.CRC8}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
 ;	'-DBENCHTEST'
@@ -65,6 +69,8 @@ lib_deps =
 	${libraries.ArduinoJson}
 	${libraries.Ticker}
 	${libraries.arduinolog}
+	${libraries.DallasTemperature}
+	${libraries.CRC8}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
 ;  '-DDISABLE_LOGGING'
@@ -72,4 +78,30 @@ build_flags =
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
 upload_port = spa-3C71BF9DFA90.local.
+upload_protocol = espota
+
+[env:ESP32prodOta]
+platform = espressif32@6.1.0
+board = esp32dev
+monitor_filters = esp32_exception_decoder
+framework = arduino
+build_type = debug
+board_build.filesystem = littlefs
+board_build.partitions = min_spiffs.csv
+lib_deps = 
+	${libraries.wifimanager32}
+	${libraries.CircularBuffer}
+	${libraries.PubSubClient}
+	${libraries.ArduinoJson}
+	${libraries.Ticker}
+	${libraries.arduinolog}
+	${libraries.DallasTemperature}
+	${libraries.CRC8}
+build_flags =
+  '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
+;  '-DDISABLE_LOGGING'
+
+monitor_port = /dev/cu.usbserial-0001
+monitor_speed = 115200
+upload_port = spa-240AC4EC20DC.local.
 upload_protocol = espota
