--- a/platformio.ini
+++ b/platformio.ini
@@ -73,7 +73,7 @@ lib_deps =
 	${libraries.CRC8}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
-;  '-DDISABLE_LOGGING'
+  '-DPRODUCTION'
 
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
@@ -99,7 +99,7 @@ lib_deps =
 	${libraries.CRC8}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
-;  '-DDISABLE_LOGGING'
+  '-DPRODUCTION'
 
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
