Pause for today

--- a/platformio.ini
+++ b/platformio.ini
@@ -99,7 +99,8 @@ lib_deps =
 	${libraries.CRC8}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
-  '-DPRODUCTION'
+;  '-DPRODUCTION'
+	'-DDISCOVERY'
 
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
