--- a/platformio.ini
+++ b/platformio.ini
@@ -100,7 +100,7 @@ lib_deps =
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
   '-DPRODUCTION'
-	'-DDISCOVERY'
+	'-DLOCAL_CONNECT'
 
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
