--- a/platformio.ini
+++ b/platformio.ini
@@ -99,7 +99,7 @@ lib_deps =
 	${libraries.CRC8}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
-  '-DPRODUCTION'
+;  '-DPRODUCTION'
 	'-DLOCAL_CONNECT'
 
 monitor_port = /dev/cu.usbserial-0001
