--- a/platformio.ini
+++ b/platformio.ini
@@ -74,6 +74,7 @@ lib_deps =
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
   '-DPRODUCTION'
+;	'-DLOCAL_CONNECT'
 
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
@@ -99,7 +100,7 @@ lib_deps =
 	${libraries.CRC8}
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
-;  '-DPRODUCTION'
+  '-DPRODUCTION'
 	'-DLOCAL_CONNECT'
 
 monitor_port = /dev/cu.usbserial-0001
