--- a/emulator/package.json
+++ b/emulator/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "serialport": "^12.0.0"
+    "serialport": "^12.0.0",
+    "crc": "^3.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
