--- a/platformio.ini
+++ b/platformio.ini
@@ -135,9 +135,10 @@ lib_deps =
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
   '-DPRODUCTION'
+;  '-DREMOTE_CLIENT'	
 	'-DLOCAL_CONNECT'
 	'-DLOCAL_CLIENT'
-;	'-DTELNET_LOG'
+	'-DTELNET_LOG'
 
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
