--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,7 @@ CRC8 = RobTillaart/CRC
 ESPAsyncWebServer = https://github.com/me-no-dev/ESPAsyncWebServer.git
 base64 = https://github.com/Densaugeo/base64_arduino.git
 telnet = jandrassy/TelnetStream
+time = PaulStoffregen/Time
 
 [env:ESP32serial]
 platform = espressif32@6.1.0
@@ -59,6 +60,7 @@ lib_deps =
 	${libraries.ESPAsyncWebServer}
 	${libraries.base64}
 	${libraries.telnet}
+	${libraries.time}
 
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
@@ -95,6 +97,7 @@ lib_deps =
 	${libraries.ESPAsyncWebServer}
 	${libraries.base64}
 	${libraries.telnet}
+	${libraries.time}
 	
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
@@ -118,7 +121,7 @@ monitor_filters = esp32_exception_decoder
 framework = arduino
 build_type = debug
 board_build.filesystem = littlefs
-board_build.partitions = spa_module.csv
+; board_build.partitions = spa_module.csv
 lib_deps = 
 	${libraries.wifimanager32}
 	${libraries.CircularBuffer}
@@ -131,6 +134,7 @@ lib_deps =
 	${libraries.ESPAsyncWebServer}
 	${libraries.base64}
 	${libraries.telnet}
+	${libraries.time}
 
 build_flags =
   '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
