--- a/platformio.ini
+++ b/platformio.ini
@@ -121,7 +121,7 @@ monitor_filters = esp32_exception_decoder
 framework = arduino
 build_type = debug
 board_build.filesystem = littlefs
-; board_build.partitions = spa_module.csv
+board_build.partitions = spa_module.csv
 lib_deps = 
 	${libraries.wifimanager32}
 	${libraries.CircularBuffer}
