Stabilize REMOTE_CLIENT (#4)
* Initial builds

* WIP

* Tuning

* Update platformio.ini

* Fix

* Update spaMqttMessage.cpp

* Update spaMqttMessage.cpp

* Update spaMqttMessage.cpp

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@
 [platformio]
 description = Balboa Spa WiFi Module
 default_envs = ESP32ota
-
+boards_dir = boards
 data_dir = balboa-spa/dist
 
 [libraries]
@@ -36,10 +36,9 @@ CRC8 = RobTillaart/CRC
 ESPAsyncWebServer = https://github.com/me-no-dev/ESPAsyncWebServer.git
 base64 = https://github.com/Densaugeo/base64_arduino.git
 telnet = jandrassy/TelnetStream
-time = PaulStoffregen/Time
 
-[env:ESP32serial]
-platform = espressif32@6.1.0
+[com]
+platform = espressif32@6.8.1
 board = esp32dev
 monitor_filters = esp32_exception_decoder
 framework = arduino
@@ -47,6 +46,9 @@ build_type = debug
 board_build.filesystem = littlefs
 board_build.partitions = spa_module.csv
 extra_scripts = post:scripts/extra_script.py
+
+build_flags =
+  '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
 
 lib_deps = 
 	${libraries.wifimanager32}
@@ -60,15 +62,26 @@ lib_deps =
 	${libraries.ESPAsyncWebServer}
 	${libraries.base64}
 	${libraries.telnet}
-	${libraries.time}
+
+[env:ESP32serial]
+platform = ${com.platform}
+board =  ${com.board}
+monitor_filters = ${com.monitor_filters}
+framework = ${com.framework}
+build_type = ${com.build_type}
+board_build.filesystem = ${com.board_build.filesystem}
+board_build.partitions = ${com.board_build.partitions}
+extra_scripts = ${com.extra_scripts}
+
+lib_deps = ${com.lib_deps}
 
 build_flags =
-  '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
+  ${com.build_flags}
 ;  '-DPRODUCTION'
 ;	'-DLOCAL_CONNECT'
-  '-DLOCAL_CLIENT'
-;  '-DREMOTE_CLIENT'
-	'-DTELNET_LOG'
+;  '-DLOCAL_CLIENT'
+  '-DREMOTE_CLIENT'
+;	'-DTELNET_LOG'
 
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
@@ -76,36 +89,24 @@ upload_port = /dev/cu.usbserial-0001
 upload_speed = 921600
 
 [env:ESP32ota]
-platform = espressif32@6.1.0
-board = esp32dev
-monitor_filters = esp32_exception_decoder
-framework = arduino
-build_type = debug
-board_build.filesystem = littlefs
-board_build.partitions = spa_module.csv
-extra_scripts = post:scripts/extra_script.py
+platform = ${com.platform}
+board =  ${com.board}
+monitor_filters = ${com.monitor_filters}
+framework = ${com.framework}
+build_type = ${com.build_type}
+board_build.filesystem = ${com.board_build.filesystem}
+board_build.partitions = ${com.board_build.partitions}
+extra_scripts = ${com.extra_scripts}
 
-lib_deps = 
-	${libraries.wifimanager32}
-	${libraries.CircularBuffer}
-	${libraries.PubSubClient}
-	${libraries.ArduinoJson}
-	${libraries.Ticker}
-	${libraries.arduinolog}
-	${libraries.DallasTemperature}
-	${libraries.CRC8}
-	${libraries.ESPAsyncWebServer}
-	${libraries.base64}
-	${libraries.telnet}
-	${libraries.time}
-	
+lib_deps = ${com.lib_deps}
+
 build_flags =
-  '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
+  ${com.build_flags}
   '-DPRODUCTION'
-;  '-DREMOTE_CLIENT'
-	'-DLOCAL_CONNECT'
-	'-DLOCAL_CLIENT'
-;	 '-DTELNET_LOG'
+  '-DREMOTE_CLIENT'
+;	'-DLOCAL_CONNECT'
+;	'-DLOCAL_CLIENT'
+;	'-DTELNET_LOG'
 
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
@@ -115,29 +116,19 @@ upload_port = spa-3C71BF9DFA90.local.		; connected to serial port
 upload_protocol = espota
 
 [env:ESP32prodOta]
-platform = espressif32@6.1.0
-board = esp32dev
-monitor_filters = esp32_exception_decoder
-framework = arduino
-build_type = debug
-board_build.filesystem = littlefs
-board_build.partitions = spa_module.csv
-lib_deps = 
-	${libraries.wifimanager32}
-	${libraries.CircularBuffer}
-	${libraries.PubSubClient}
-	${libraries.ArduinoJson}
-	${libraries.Ticker}
-	${libraries.arduinolog}
-	${libraries.DallasTemperature}
-	${libraries.CRC8}
-	${libraries.ESPAsyncWebServer}
-	${libraries.base64}
-	${libraries.telnet}
-	${libraries.time}
+platform = ${com.platform}
+board =  ${com.board}
+monitor_filters = ${com.monitor_filters}
+framework = ${com.framework}
+build_type = ${com.build_type}
+board_build.filesystem = ${com.board_build.filesystem}
+board_build.partitions = ${com.board_build.partitions}
+extra_scripts = ${com.extra_scripts}
+
+lib_deps = ${com.lib_deps}
 
 build_flags =
-  '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
+  ${com.build_flags}
   '-DPRODUCTION'
 ;  '-DREMOTE_CLIENT'	
 	'-DLOCAL_CONNECT'
@@ -149,3 +140,33 @@ monitor_speed = 115200
 
 upload_port = spa-240AC4EC20DC.local. ; prod board
 upload_protocol = espota
+
+[env:ESP32-epd47]
+platform = ${com.platform}
+board = T5-ePaper-S3
+monitor_filters = ${com.monitor_filters}
+framework = ${com.framework}
+build_type = ${com.build_type}
+board_build.filesystem = ${com.board_build.filesystem}
+board_build.partitions = default_16MB.csv
+extra_scripts = ${com.extra_scripts}
+
+lib_deps = ${com.lib_deps}
+
+build_flags =
+  ${com.build_flags}
+; Enable -DARDUINO_USB_CDC_ON_BOOT will start printing and wait for terminal access during startup
+  '-DARDUINO_USB_CDC_ON_BOOT=1'
+  '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
+; '-DPRODUCTION'
+  '-DREMOTE_CLIENT'	
+;	'-DLOCAL_CONNECT'
+;	'-DLOCAL_CLIENT'
+;	'-DTELNET_LOG'
+
+monitor_port = /dev/cu.usbmodem1101
+monitor_speed = 115200
+
+upload_port = /dev/cu.usbmodem1101 ; prod board
+upload_speed = 921600
+; upload_protocol = espota
