--- a/platformio.ini
+++ b/platformio.ini
@@ -79,8 +79,9 @@ build_flags =
   ${com.build_flags}
 ;  '-DPRODUCTION'
 ;	'-DLOCAL_CONNECT'
-;  '-DLOCAL_CLIENT'
-  '-DREMOTE_CLIENT'
+  '-DLOCAL_CLIENT'
+	'-DBRIDGE'
+;  '-DREMOTE_CLIENT'
 ;	'-DTELNET_LOG'
 
 monitor_port = /dev/cu.usbserial-0001
@@ -103,10 +104,11 @@ lib_deps = ${com.lib_deps}
 build_flags =
   ${com.build_flags}
   '-DPRODUCTION'
-  '-DREMOTE_CLIENT'
+;  '-DREMOTE_CLIENT'
 ;	'-DLOCAL_CONNECT'
-;	'-DLOCAL_CLIENT'
-;	'-DTELNET_LOG'
+	'-DLOCAL_CLIENT'
+	'-DBRIDGE'
+	'-DTELNET_LOG'
 
 monitor_port = /dev/cu.usbserial-0001
 monitor_speed = 115200
@@ -133,6 +135,7 @@ build_flags =
 ;  '-DREMOTE_CLIENT'	
 	'-DLOCAL_CONNECT'
 	'-DLOCAL_CLIENT'
+	'-DBRIDGE'
 	'-DTELNET_LOG'
 
 monitor_port = /dev/cu.usbserial-0001
