--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,12 @@ ESPAsyncWebServer = https://github.com/me-no-dev/ESPAsyncWebServer.git
 base64 = https://github.com/Densaugeo/base64_arduino.git
 telnet = jandrassy/TelnetStream
 
+; edp47 required libraries
+
+edp47 = https://github.com/Xinyuan-LilyGO/LilyGo-EPD47.git#esp32s3
+Wire = Wire
+SPI = SPI
+
 [com]
 platform = espressif32@6.8.1
 board = esp32dev
@@ -63,6 +69,15 @@ lib_deps =
 	${libraries.base64}
 	${libraries.telnet}
 
+[com-edp47]
+build_flags =
+    '-DARDUINO_USB_CDC_ON_BOOT=1'
+
+lib_deps = 
+	${libraries.Wire}
+	${libraries.edp47}
+	${libraries.SPI}
+
 [env:ESP32serial]
 platform = ${com.platform}
 board =  ${com.board}
@@ -77,11 +92,11 @@ lib_deps = ${com.lib_deps}
 
 build_flags =
   ${com.build_flags}
-;  '-DPRODUCTION'
+  '-DPRODUCTION'
 ;	'-DLOCAL_CONNECT'
-  '-DLOCAL_CLIENT'
-	'-DBRIDGE'
-;  '-DREMOTE_CLIENT'
+;  '-DLOCAL_CLIENT'
+;	'-DBRIDGE'
+  '-DREMOTE_CLIENT'
 ;	'-DTELNET_LOG'
 
 monitor_port = /dev/cu.usbserial-0001
@@ -106,8 +121,8 @@ build_flags =
   '-DPRODUCTION'
 ;  '-DREMOTE_CLIENT'
 ;	'-DLOCAL_CONNECT'
-	'-DLOCAL_CLIENT'
-	'-DBRIDGE'
+;	'-DLOCAL_CLIENT'
+;	'-DBRIDGE'
 	'-DTELNET_LOG'
 
 monitor_port = /dev/cu.usbserial-0001
@@ -155,21 +170,20 @@ board_build.partitions = default_16MB.csv
 extra_scripts = ${com.extra_scripts}
 
 lib_deps = ${com.lib_deps}
+	${com-edp47.lib_deps}
 
 build_flags =
   ${com.build_flags}
-; Enable -DARDUINO_USB_CDC_ON_BOOT will start printing and wait for terminal access during startup
-  '-DARDUINO_USB_CDC_ON_BOOT=1'
-  '-DLOG_LEVEL=LOG_LEVEL_VERBOSE'
-; '-DPRODUCTION'
+	${com-edp47.build_flags}
   '-DREMOTE_CLIENT'	
 ;	'-DLOCAL_CONNECT'
 ;	'-DLOCAL_CLIENT'
 ;	'-DTELNET_LOG'
+	'-DspaEpaper'
 
-monitor_port = /dev/cu.usbmodem1101
+;monitor_port = /dev/cu.usbmodem101
 monitor_speed = 115200
 
-upload_port = /dev/cu.usbmodem1101 ; prod board
-upload_speed = 921600
-; upload_protocol = espota
+upload_port = spa-7CDFA1FFF2B0.local  ; prod board
+;upload_speed = 921600
+upload_protocol = espota
