--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,7 @@ arduinojson = ArduinoJson@6.18.3
 wifimanager32 = https://github.com/tzapu/WiFiManager.git#9f5981e
 Ticker = sstaub/TickTwo@^4.4.0
 arduinolog = thijse/ArduinoLog@1.1.1
-OneWire = PaulStoffregen/OneWire@2.3.8
+OneWire = paulstoffregen/OneWire@^2.3.8
 DallasTemperature = milesburton/DallasTemperature @ ^3.11.0
 CRC8 = RobTillaart/CRC
 ESPAsyncWebServer = https://github.com/me-no-dev/ESPAsyncWebServer.git
@@ -64,6 +64,7 @@ lib_deps =
 	${libraries.ArduinoJson}
 	${libraries.Ticker}
 	${libraries.arduinolog}
+	${libraries.OneWire}
 	${libraries.DallasTemperature}
 	${libraries.CRC8}
 	${libraries.ESPAsyncWebServer}
