--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,7 @@ CRC8 = RobTillaart/CRC
 ESPAsyncWebServer = https://github.com/me-no-dev/ESPAsyncWebServer.git
 base64 = https://github.com/Densaugeo/base64_arduino.git
 telnet = jandrassy/TelnetStream
+lvgl = lvgl/lvgl
 
 ; edp47 required libraries
 
@@ -77,6 +78,13 @@ lib_deps =
 	${libraries.Wire}
 	${libraries.edp47}
 	${libraries.SPI}
+
+[com-lvgl]
+build_flags =
+  '-DARDUINO_USB_CDC_ON_BOOT=1'
+
+lib_deps = 
+	${libraries.lvgl}
 
 [env:ESP32serial]
 platform = ${com.platform}
@@ -199,16 +207,20 @@ board_build.partitions = ${com.board_build.partitions}
 extra_scripts = ${com.extra_scripts}
 
 lib_deps = ${com.lib_deps}
+	${com-lvgl.lib_deps}
 
 build_flags =
   ${com.build_flags}
+	${com-lvgl.build_flags}
   '-DPRODUCTION'
   '-DREMOTE_CLIENT'	
 ;	'-DLOCAL_CONNECT'
 ;	'-DLOCAL_CLIENT'
 ;	'-DBRIDGE'
-	'-DTELNET_LOG'
-	'-DARDUINO_USB_MODE=1'
+;	'-DTELNET_LOG'
+;  '-DLV_CONF_INCLUDE_SIMPLE'
+  '-DLVGL_DISPLAY'
+	'-DLV_CONF_PATH=${PROJECT_DIR}/lib/lvgl/lv_conf.h'
 
 monitor_port = /dev/cu.usbmodem11401
 monitor_speed = 115200
