--- a/platformio.ini
+++ b/platformio.ini
@@ -33,6 +33,10 @@ edp47 = https://github.com/Xinyuan-LilyGO/LilyGo-EPD47.git#esp32s3
 Wire = Wire
 SPI = SPI
 
+# lvgl required libraries
+smartDisplay = symlink://../esp32-smartdisplay
+# smartDisplay = https://github.com/rzeldent/esp32-smartdisplay#develop
+
 [com]
 platform = espressif32@6.8.1
 board = esp32dev
@@ -67,6 +71,30 @@ lib_deps =
 	${libraries.Wire}
 	${libraries.edp47}
 	${libraries.SPI}
+
+[com-lvgl]
+build_flags =
+		-Ofast
+    -Wall
+    #'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO'
+    '-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG'
+    #'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE'
+    '-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
+lib_deps =
+	${libraries.smartDisplay}
+
+[env]
+platform = ${com.platform}
+board =  ${com.board}
+monitor_filters = ${com.monitor_filters}
+framework = ${com.framework}
+build_type = ${com.build_type}
+board_build.filesystem = ${com.board_build.filesystem}
+board_build.partitions = ${com.board_build.partitions}
+extra_scripts = ${com.extra_scripts}
+monitor_speed = 115200
+lib_deps = ${com.lib_deps}
+build_flags = ${com.build_flags}
 
 [env:ESP32serial]
 platform = ${com.platform}
@@ -177,3 +205,20 @@ monitor_speed = 115200
 upload_port = spa-7CDFA1FFF2B0.local  ; prod board
 ;upload_speed = 921600
 upload_protocol = espota
+
+[env:lvgl-esp32-4848S040CIY1]
+board = esp32-4848S040CIY1
+board_build.partitions = default_16MB.csv
+
+lib_deps = ${com.lib_deps}
+	${com-lvgl.lib_deps}
+
+build_flags =
+  ${com.build_flags}
+	${com-lvgl.build_flags}
+	'-D BOARD_NAME="${this.board}"'
+	'-D LVGL'
+  '-DREMOTE_CLIENT'	
+;	'-DLOCAL_CONNECT'
+;	'-DLOCAL_CLIENT'
+;	'-DTELNET_LOG'
