--- a/platformio.ini
+++ b/platformio.ini
@@ -75,7 +75,7 @@ lib_deps =
 [com-lvgl]
 build_flags =
 		-Ofast
-    -Wall
+    #-Wall
     #'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_INFO'
     '-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG'
     #'-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE'
@@ -217,7 +217,7 @@ build_flags =
   ${com.build_flags}
 	${com-lvgl.build_flags}
 	'-D BOARD_NAME="${this.board}"'
-	'-D LVGL'
+	'-DSPALVGL'
   '-DREMOTE_CLIENT'	
 ;	'-DLOCAL_CONNECT'
 ;	'-DLOCAL_CLIENT'
