--- a/platformio.ini
+++ b/platformio.ini
@@ -219,6 +219,7 @@ build_flags =
 	'-D BOARD_NAME="${this.board}"'
 	'-DSPALVGL'
   '-DREMOTE_CLIENT'	
+;	'-DLV_USE_100ASK_SCREENSHOT'
 ;	'-DLOCAL_CONNECT'
 ;	'-DLOCAL_CLIENT'
 ;	'-DTELNET_LOG'
