--- a/platformio.ini
+++ b/platformio.ini
@@ -218,7 +218,8 @@ build_flags =
 	${com-lvgl.build_flags}
 	'-D BOARD_NAME="${this.board}"'
 	'-DSPALVGL'
-  '-DREMOTE_CLIENT'	
+  '-DREMOTE_CLIENT'
+	'-DSQUARELINE'
 ;	'-DLV_USE_100ASK_SCREENSHOT'
 ;	'-DLOCAL_CONNECT'
 ;	'-DLOCAL_CLIENT'
