--- a/platformio.ini
+++ b/platformio.ini
@@ -186,6 +186,7 @@ build_type = ${com.build_type}
 board_build.filesystem = ${com.board_build.filesystem}
 board_build.partitions = default_16MB.csv
 extra_scripts = ${com.extra_scripts}
+lib_ignore = spaLvgl
 
 lib_deps = ${com.lib_deps}
 	${com-edp47.lib_deps}
