--- a/platformio.ini
+++ b/platformio.ini
@@ -35,6 +35,7 @@ SPI = SPI
 
 # lvgl required libraries
 smartDisplay = symlink://../esp32-smartdisplay
+lvgl = symlink://../lvgl
 # smartDisplay = https://github.com/rzeldent/esp32-smartdisplay#develop
 
 [com]
@@ -82,6 +83,7 @@ build_flags =
     '-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
 lib_deps =
 	${libraries.smartDisplay}
+	${libraries.lvgl}
 
 [env]
 platform = ${com.platform}
