--- a/platformio.ini
+++ b/platformio.ini
@@ -83,7 +83,7 @@ build_flags =
     '-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
 lib_deps =
 	${libraries.smartDisplay}
-	${libraries.lvgl}
+#	${libraries.lvgl}
 
 [env]
 platform = ${com.platform}
@@ -223,7 +223,7 @@ build_flags =
 	'-DSPALVGL'
   '-DREMOTE_CLIENT'
 	'-DSQUARELINE'
-;	'-DLV_USE_100ASK_SCREENSHOT'
+	'-DLV_USE_100ASK_SCREENSHOT'
 ;	'-DLOCAL_CONNECT'
 ;	'-DLOCAL_CLIENT'
 ;	'-DTELNET_LOG'
