--- a/platformio.ini
+++ b/platformio.ini
@@ -83,7 +83,7 @@ build_flags =
     '-D LV_CONF_PATH=${platformio.include_dir}/lv_conf.h'
 lib_deps =
 	${libraries.smartDisplay}
-#	${libraries.lvgl}
+	${libraries.lvgl}
 
 [env]
 platform = ${com.platform}
